# HR-FFI-SYSTEM

./: .gitignore  AGENTS.md  AWS_AGENT_DEPLOYMENT_HANDOFF.md  DEPLOYMENT_DOCKER.md  DOCKER_AGENT_HANDOFF.md  Employee Data Generation and Formatting.xlsx  FFI sheet V5.xlsx  HR FFI template copy.xlsx  HR_FFI_fixed.xlsx  HR_FFI_fixed_v2.xlsx  SECURITY_POLICY.md  docker-compose.prod.yml  docker-compose.yml  git_status.txt  git_status_cmd.txt  structure.txt  system_architecture_overview.md
Backend/: .dockerignore  .env  .env.docker  .env.docker.example  .env.example  .env.production.example  .gitignore  Dockerfile  check_employee.py  check_urls.py  create_admin.py  create_employee_profile.py  create_test_user.py  db.sqlite3  debug_output.txt  entrypoint.sh  list_users.py  manage.py  pyproject.toml  requirements.txt  run_debug_tests.py  seed_leaves.py  show_headers.py  test_leaves_output.txt  test_leaves_output_2.txt  test_leaves_output_3.txt  test_leaves_output_4.txt  test_leaves_output_5.txt  test_leaves_output_6.txt  test_output.txt  test_output_debug.txt  test_urls.py  update_user_role.py  verify_api_contract.py  verify_endpoint.py  verify_manager_workflow.py  verify_payroll.py
Backend/accounts/: models.py  password_policy.py  permissions.py  security.py  serializers.py  tests.py  throttles.py  urls.py  views.py
Backend/admin_portal/: models.py  serializers.py  serializers_settings.py  urls.py  views_dashboard.py  views_settings.py  views_users.py
Backend/announcements/: __init__.py  admin.py  models.py  serializers.py  tests.py  urls.py  utils.py  views.py
(+556 files in other folders)
